Refine "Why This Matters" section for clarity and add performance tuning tips for streaming datasets

--- a/posts/2026/hf-streaming-unsloth/train-massive-datasets-without-downloading.ipynb
+++ b/posts/2026/hf-streaming-unsloth/train-massive-datasets-without-downloading.ipynb
@@ -577,18 +577,41 @@
    "source": [
     "## Why This Matters\n",
     "\n",
-    "\n",
-    "- **Minimal disk space needed** - train on massive datasets without downloading\n",
+    "- **No disk space needed** - train on massive datasets without downloading\n",
     "- **Works everywhere** - Colab, Kaggle, HF Jobs, any constrained environment\n",
-    "- **Scales up** - combine with HF Jobs for training without needing local disk or GPU!\n",
+    "- **Any language** - FineWeb-2 has 90+ languages available\n",
+    "- **Scales up** - combine with HF Jobs for 2x faster streaming\n",
     "\n",
     "The full UV script is available [here](https://huggingface.co/datasets/uv-scripts/training/blob/main/latin-llm-streaming.py) if you want to train your own.\n",
     "\n",
+    "### Performance Tips\n",
+    "\n",
+    "If streaming feels slow, you can tune PyArrow's prefetching when loading the dataset:\n",
+    "\n",
+    "```python\n",
+    "import pyarrow\n",
+    "import pyarrow.dataset\n",
+    "\n",
+    "fragment_scan_options = pyarrow.dataset.ParquetFragmentScanOptions(\n",
+    "    cache_options=pyarrow.CacheOptions(\n",
+    "        prefetch_limit=1,  # prefetch chunks in background\n",
+    "        range_size_limit=128 << 20  # 128 MiB minimum request size (default 32 MiB)\n",
+    "    ),\n",
+    ")\n",
+    "\n",
+    "dataset = load_dataset(..., streaming=True, fragment_scan_options=fragment_scan_options)\n",
+    "```\n",
+    "\n",
     "### Learn More\n",
     "\n",
-    "- [Streaming Datasets for ML Training](https://huggingface.co/blog/streaming-datasets) - HF blog post on streaming\n",
+    "- [Streaming Datasets for ML Training](https://huggingface.co/blog/streaming-datasets) - HF blog with more performance tuning tips\n",
     "- [Datasets Streaming Documentation](https://huggingface.co/docs/datasets/stream) - full docs"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
